--- a/base/css/style.css
+++ b/base/css/style.css
@@ -2266,7 +2266,7 @@ footer .copylight.bg-gray2 {
 }
 
 [data-componant="roi-infolist-event"] {
-  height: 464px;
+  height: 474px;
 }
 
 [data-componant="roi-infolist-event"] .unit-content {
@@ -2282,6 +2282,14 @@ footer .copylight.bg-gray2 {
 }
 
 [data-componant="roi-infolist-road"] .unit-content {
+  background: none;
+}
+
+[data-componant="roi-infolist-crosswalk"] {
+  height: 445px;
+}
+
+[data-componant="roi-infolist-crosswalk"] .unit-content {
   background: none;
 }
 
@@ -2976,6 +2984,10 @@ footer .copylight.bg-gray2 {
   margin-top: 10px;
 }
 
+.roi-vehicle.event > .short tr:last-child td {
+  border-bottom: 0;
+}
+
 .roi-vehicle.event > .short td .select-choice {
   display: block;
 }
@@ -2987,12 +2999,25 @@ footer .copylight.bg-gray2 {
 
 .roi-vehicle.event > .short td[rowspan] {
   padding-left: 10px;
+  border-bottom: 0;
 }
 
 .roi-vehicle.event > .short td .btn-block {
   width: 100%;
   height: 149px;
   border-radius: 5px;
+}
+
+.roi-vehicle.crosswalk > .short {
+  margin-top: 10px;
+}
+
+.roi-vehicle.crosswalk > .short .select-choice {
+  display: block;
+}
+
+.roi-vehicle.crosswalk > .short .select-choice .selectbox {
+  width: 100%;
 }
 
 .road-choice .radio-bordered .txt {
@@ -3263,10 +3288,13 @@ footer .copylight.bg-gray2 {
     height: 530px;
   }
   [data-componant="roi-infolist-event"] {
-    height: 466px;
+    height: 476px;
   }
   [data-componant="roi-infolist-road"] {
     height: 489px;
+  }
+  [data-componant="roi-infolist-crosswalk"] {
+    height: 447px;
   }
   /* 파일 업데이트 > 우측 하단 리스트 */
   [data-componant="file-update"] {
