ROI설정 > 횡단보도 탭에 사용/방향/길이에 대한 오른쪽에 추가 버튼 추가

--- a/base/css/style.css
+++ b/base/css/style.css
@@ -2994,6 +2994,16 @@ footer .copylight.bg-gray2 {
   border-bottom: 10px solid #fff;
 }
 
+.roi-vehicle.crosswalk > .short td[rowspan] {
+  padding-left: 10px;
+}
+
+.roi-vehicle.crosswalk > .short td .btn-block {
+  width: 100%;
+  height: 99px;
+  border-radius: 5px;
+}
+
 .roi-vehicle.crosswalk > .short .select-choice {
   display: block;
 }
