--- a/base/css/style.css
+++ b/base/css/style.css
@@ -947,6 +947,14 @@ footer .copylight.bg-gray2 {
   background-image: url(/base/images/ic_cam.png);
 }
 
+.gnb li.equipment > a::before {
+  background-image: url(/base/images/ic_equipment.png);
+}
+
+.gnb li.vds > a::before {
+  background-image: url(/base/images/ic_vds.png);
+}
+
 .gnb li:hover > a {
   color: #fff;
 }
@@ -1477,6 +1485,18 @@ footer .copylight.bg-gray2 {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+}
+
+.btn-inline-group.align-right {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.btn-inline-group.align-right .btn-block {
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none;
 }
 
 .btn-inline-group.bordered {
@@ -2895,8 +2915,10 @@ footer .copylight.bg-gray2 {
 }
 
 .monitering > .ly-left .ly-left-list {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   overflow-y: auto;
-  height: 793px;
   background: #2A3F54;
 }
 
@@ -2938,7 +2960,7 @@ footer .copylight.bg-gray2 {
   margin: 0 10px;
   padding: 0 5px;
   line-height: 41.86px;
-  font-size: 18px;
+  font-size: 15px;
   border-bottom-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -2956,7 +2978,7 @@ footer .copylight.bg-gray2 {
   width: 5px;
   height: 5px;
   margin-right: 8px;
-  vertical-align: 5px;
+  vertical-align: 4px;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 3px;
 }
@@ -2979,7 +3001,7 @@ footer .copylight.bg-gray2 {
   margin: 0 10px;
   padding: 0 5px;
   line-height: 41.86px;
-  font-size: 18px;
+  font-size: 15px;
   border-bottom-color: rgba(255, 255, 255, 0.9);
 }
 
@@ -3001,7 +3023,7 @@ footer .copylight.bg-gray2 {
   width: 5px;
   height: 5px;
   margin-right: 8px;
-  vertical-align: 5px;
+  vertical-align: 4px;
   background: rgba(255, 255, 255, 0.9);
   border-radius: 3px;
 }
@@ -3023,7 +3045,7 @@ footer .copylight.bg-gray2 {
 }
 
 .monitering > .ly-left .spot-state-list .radar.first2 {
-  padding-top: 9px;
+  padding-top: 15px;
 }
 
 .monitering > .ly-left .spot-state-list .radar.last2 {
@@ -3031,7 +3053,7 @@ footer .copylight.bg-gray2 {
 }
 
 .monitering > .ly-left .spot-state-list .radar + .radar {
-  margin-top: 8px;
+  margin-top: 20px;
 }
 
 .monitering > .ly-left .spot-state-list .radar-power {
@@ -3049,8 +3071,8 @@ footer .copylight.bg-gray2 {
 }
 
 .monitering > .ly-left .spot-state-list .radar-circle {
-  width: 30px;
-  height: 30px;
+  width: 25px;
+  height: 25px;
   border-radius: 100%;
 }
 
@@ -3094,7 +3116,7 @@ footer .copylight.bg-gray2 {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding: 17px 30px;
+  padding: 25px 30px;
 }
 
 .monitering .bind-infomation [data-componant="camera-info"] .tbl-border-none {
@@ -3143,9 +3165,9 @@ footer .copylight.bg-gray2 {
 }
 
 .data-info-comopnent h3 {
-  margin-bottom: 15px;
-  line-height: 25px;
-  font-size: 25px;
+  margin-bottom: 10px;
+  line-height: 20px;
+  font-size: 20px;
   font-weight: 700;
   color: #0c4670;
 }
@@ -3164,7 +3186,7 @@ footer .copylight.bg-gray2 {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  padding: 37px 0 12px 0;
+  padding: 37px 0 10px 0;
 }
 
 .data-info-comopnent .header-bind h3 {
@@ -3180,14 +3202,6 @@ footer .copylight.bg-gray2 {
   height: calc(100% - 44px);
 }
 
-.data-info-comopnent .tbl-sticky {
-  height: 44px;
-}
-
-.data-info-comopnent .tbl-sticky .header-bg {
-  height: 44px;
-}
-
 .data-info-comopnent .tbl-sticky-inner {
   height: 314px;
   overflow-y: overlay;
@@ -3196,16 +3210,12 @@ footer .copylight.bg-gray2 {
   border-bottom-right-radius: 5px;
 }
 
-.data-info-comopnent .tbl-sticky-inner thead span {
-  font-size: 18px;
-}
-
 .data-info-comopnent .tbl-sticky-inner tbody tr:nth-child(even) td {
   background: rgba(231, 237, 240, 0.5);
 }
 
 .data-info-comopnent .tbl-sticky-inner tbody td {
-  line-height: 17px;
+  font-size: 13px;
   border: 0 !important;
 }
 
@@ -3214,11 +3224,40 @@ footer .copylight.bg-gray2 {
 }
 
 /* 모니터링 > VDS 교통수동정보 */
-.vds-traffic-manual-info .traffic-manual-info-container:first-child {
-  border: 1px solid #181616;
+.vds-traffic-manual-info {
+  gap: 0 30px;
 }
 
-.traffic-manual-info-container {
+.vds-traffic-manual-info.ly-main {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.traffic-manual-info-container-left {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.traffic-manual-info-container-left .data-info-comopnent .tbl-sticky-inner {
+  height: 770px;
+}
+
+.traffic-manual-info-container-right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.traffic-manual-info-container-right .manual-info {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.traffic-manual-info-container-right .manual-info-bind {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3229,71 +3268,39 @@ footer .copylight.bg-gray2 {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
+  margin-top: 30px;
+  border: 1px solid #181616;
 }
 
-.traffic-manual-info-container .manual-info {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.traffic-manual-info-container .tbl-border-none {
+.traffic-manual-info-container-right .tbl-border-none {
   padding: 5px 20px;
   border-right: 1px solid #181616;
 }
 
-.traffic-manual-info-container .tbl-border-none th {
+.traffic-manual-info-container-right .tbl-border-none th {
   font-weight: 700;
 }
 
-.traffic-manual-info-container .tbl-border-none td {
-  font-size: 14px;
+.traffic-manual-info-container-right .tbl-border-none td {
+  font-size: 13px;
 }
 
-.traffic-manual-info-container .btn-inline-group {
-  gap: 0 30px;
+.traffic-manual-info-container-right .btn-inline-group {
+  gap: 0 20px;
   padding: 20px;
 }
 
-.traffic-manual-info-container .btn-inline-group .btn-block {
+.traffic-manual-info-container-right .btn-inline-group .btn-block {
   border-radius: 5px;
   font-size: 30px;
   font-weight: 700;
 }
 
-.traffic-manual-info-container2 {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  gap: 0 30px;
-  padding-top: 40px;
-}
-
-.traffic-manual-info-container2 > div {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-}
-
-.traffic-manual-info-container2 .data-info-comopnent .tbl-sticky-inner {
-  height: 576px;
-}
-
-.traffic-manual-info-container2 .tbl-celled {
+.traffic-manual-info-container-right .tbl-celled {
   margin-top: 40px;
 }
 
-.traffic-manual-info-container2 .tbl-celled th {
+.traffic-manual-info-container-right .tbl-celled th {
   padding: 11px 0;
 }
 
