--- a/base/css/style.css
+++ b/base/css/style.css
@@ -3037,11 +3037,11 @@ footer .copylight.bg-gray2 {
 }
 
 .monitering > .ly-left .spot-state-list .radar.first {
-  padding-top: 15px;
+  padding-top: 13px;
 }
 
 .monitering > .ly-left .spot-state-list .radar.last {
-  padding-bottom: 15px;
+  padding-bottom: 13px;
 }
 
 .monitering > .ly-left .spot-state-list .radar.first2 {
@@ -3053,7 +3053,7 @@ footer .copylight.bg-gray2 {
 }
 
 .monitering > .ly-left .spot-state-list .radar + .radar {
-  margin-top: 20px;
+  margin-top: 14px;
 }
 
 .monitering > .ly-left .spot-state-list .radar-power {
@@ -3215,6 +3215,7 @@ footer .copylight.bg-gray2 {
 }
 
 .data-info-comopnent .tbl-sticky-inner tbody td {
+  line-height: 15px;
   font-size: 13px;
   border: 0 !important;
 }
@@ -3242,7 +3243,7 @@ footer .copylight.bg-gray2 {
 }
 
 .traffic-manual-info-container-left .data-info-comopnent .tbl-sticky-inner {
-  height: 770px;
+  height: 738px;
 }
 
 .traffic-manual-info-container-right {
@@ -3283,6 +3284,7 @@ footer .copylight.bg-gray2 {
 
 .traffic-manual-info-container-right .tbl-border-none td {
   font-size: 13px;
+  text-align: right;
 }
 
 .traffic-manual-info-container-right .btn-inline-group {
